updated flogoprovisioner for platform 1.1.0 release

--- a/charts/flogoprovisioner/config/otel/output-otel.conf
+++ b/charts/flogoprovisioner/config/otel/output-otel.conf
@@ -5,7 +5,7 @@
 [OUTPUT]
     Name  opentelemetry
     Match app.*
-    Host  otel-userapp
+    Host  otel-userapp-logs
     Port  4318
     Log_response_payload True
     Tls                  Off
