--- a/charts/flogoprovisioner/config/otel/parsers.conf
+++ b/charts/flogoprovisioner/config/otel/parsers.conf
@@ -5,7 +5,7 @@
 [PARSER]
     Name        formattedlog
     Format      regex
-    Regex       (?<log_time>[^ ]*)\s+(?<log_level>INFO|WARN|DEBUG|ERROR|FATAL)\s+(?<message>.*)
+    Regex       (?<log_time>[^ ]*)\t(?<log_level>INFO|WARN|DEBUG|ERROR|FATAL)\t(?<message>.*)
     Time_Key    time
     Time_Format %Y-%m-%dT%H:%M:%S.%L
     Time_Keep   On
