--- a/charts/tibco-developer-hub/Chart.yaml
+++ b/charts/tibco-developer-hub/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v2
 name: tibco-developer-hub
-description: A Helm chart for TIBCO Developer Hub
+description: A Helm chart for TIBCO® Developer Hub
 type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.32
+version: 1.1.6
 
-appVersion: "1.0.1"
+appVersion: "1.1.0"
 
 dependencies:
   - name: common
