PDP-1975: monitor agent chart changes for 1.1.0

--- a/charts/tp-dp-monitor-agent/values.yaml
+++ b/charts/tp-dp-monitor-agent/values.yaml
@@ -16,8 +16,7 @@ global:
       secret: "test"
     resources:
       serviceaccount:
-        serviceAccountName: "monitor-agent-sa"
-        create: false
+        serviceAccountName: ""
   # .Values.global.enableLogging variable can be set to false to disable starting fluentbit side-car containers
   enableLogging: true
 enableIngress: true
