Sync MSGDP 1.1.0 charts to TIBCOSoftware

--- a/charts/msg-cp-ui-contrib/Chart.yaml
+++ b/charts/msg-cp-ui-contrib/Chart.yaml
@@ -5,15 +5,15 @@
 #
 
 apiVersion: v2
-appVersion: "10.3.0.7"
-description: Data-plane provisioning chart for EMS server group
-name: msg-ems-tp
+appVersion: "1.1.0-12"
+description: CP Messaging UI Contribution EFS Copier
+name: msg-cp-ui-contrib
 version: "1.1.14"
 maintainers:
 - email: tcm@tibco.com
   name: TIBCO Cloud Messaging Team
 keywords:
 - tibco-platform
-- data-plane
+- control-plane
 - messaging
 - EMS
