--- a/charts/msg-ems-tp/templates/ems-upgrade.job.yaml
+++ b/charts/msg-ems-tp/templates/ems-upgrade.job.yaml
@@ -1,6 +1,6 @@
 {{ if .Release.IsUpgrade }}
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -24,6 +24,7 @@ metadata:
     labels:
       name: "{{ $jobname }}"
       {{ include "msg.dp.labels" . | indent 6 }}
+      {{ include "ems.std.labels" $emsParams | indent 6 }}
       tib-dp-app: msg-ems-ftl
     namespace: "{{ .Release.Namespace }}"
 spec:
@@ -39,6 +40,7 @@ spec:
                 tib-dp-app: msg-ems-ftl
                 {{ include "msg.dp.labels" . | indent 16 }}
                 {{ include "msg.dp.net.kubectl" . | indent 16}}
+                {{ include "ems.std.labels" $emsParams | indent 16 }}
         spec:
             enableServiceLinks: false
             nodeSelector:
@@ -66,9 +68,9 @@ spec:
                 command: ['/compliance/check_eua', 'bash', '-c' ]
                 args:
                 - >
-                  ( mkdir -p /logs/$MY_POD_NAME/boot ; cd /logs/$MY_POD_NAME/boot ;
+                  ( mkdir -p /data/boot ; cd /data/boot ;
                       for x in /boot/mk-*.sh ; do bash < $x ; done | tee boot.out ) ;
-                  chmod +x /usr/local/bin/helm ; 
+                  bash < /boot/fix-sample-certs.sh ; 
                   echo "Upgrading pods ..." ; 
                   kubectl get pods -l=tib-msg-stsname={{ $stsname }} | egrep -v NAME | while read x o ; do 
                     echo "POD=$x"; done ; 
@@ -105,7 +107,7 @@ spec:
                 - name: EMS_TCP_PORT
                   value: "{{ $emsParams.ems.ports.tcpPort }}"
                 - name: EMS_INIT_JSON
-                  value: "/logs/$(MY_POD_NAME)/boot/tibemsd-ftl.json"
+                  value: "/data/boot/tibemsd-ftl.json"
                 - name: EMS_HTTP_PORT
                   value: "{{ $emsParams.ems.ports.httpPort }}"
                 - name: FTL_REALM_URL
