--- a/charts/msg-ems-tp/templates/client.cm.yaml
+++ b/charts/msg-ems-tp/templates/client.cm.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -16,8 +16,6 @@
 {{- $emsPromPort := $emsParams.ems.ports.promServerEP -}}
 
 #
-
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -28,6 +26,7 @@ metadata:
     tib-dp-msg-info: "ems-ew-clients"
     tib-msg-stsname: "{{ $emsParams.ems.name }}-ems"
     {{ include "msg.dp.labels" . | indent 4 }}
+    {{ include "ems.std.labels" $emsParams | indent 4 }}
 data:
   EMS_TCP_PORT: "{{ $emsTcpPort }}"
   EMS_SSL_PORT: "{{ $emsSslPort }}"
