--- a/charts/msg-ems-tp/templates/ems-logs.pvc.yaml
+++ b/charts/msg-ems-tp/templates/ems-logs.pvc.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -10,6 +10,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: "{{ $emsParams.ems.pvcShareName }}"
+  labels:
+    {{ include "ems.std.labels" $emsParams | indent 4 }}
 spec:
   accessModes:
     - ReadWriteMany
