--- a/charts/msg-ems-tp/templates/params.cm.yaml
+++ b/charts/msg-ems-tp/templates/params.cm.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -17,6 +17,7 @@ metadata:
     tib-dp-release: "{{ .Release.Name }}"
     tib-msg-ems-name: "{{ $emsParams.ems.name }}"
     {{ include "msg.dp.labels" . | indent 4 }}
+    {{ include "ems.std.labels" $emsParams | indent 4 }}
 data:
   emsparams.yaml: |
 {{ include "need.msg.ems.params" . | indent 4 }}
