--- a/charts/msg-ems-tp/templates/script.cm.yaml
+++ b/charts/msg-ems-tp/templates/script.cm.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -16,6 +16,7 @@ metadata:
     tib-dp-app: msg-ems-ftl
     tib-msg-stsname: "{{ $emsParams.ems.name }}-ems"
     {{ include "msg.dp.labels" . | indent 4 }}
+    {{ include "ems.std.labels" $emsParams | indent 4 }}
 data:
 {{ (.Files.Glob "scripts/*").AsConfig | indent 2 }}
 ...
