--- a/charts/msg-ems-tp/values.yaml
+++ b/charts/msg-ems-tp/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023. Cloud Software Group, Inc.
+# Copyright (c) 2023-2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -25,9 +25,6 @@ ems:
     sslPort: 9012
     realmPort: 9013
     adminPort: 9014
-    promServerEP: 9091
-    promQueuesEP: 9092
-    promTopicsEP: 9093
     watchdogPort: 12502
     loggerPort: 12506
   msgData:
