--- a/charts/bwprovisioner/config/otel/parsers.conf
+++ b/charts/bwprovisioner/config/otel/parsers.conf
@@ -1,11 +1,7 @@
-# Copyright © 2023. Cloud Software Group, Inc.
-# This file is subject to the license terms contained
-# in the license file that is distributed with this file.
-
 [PARSER]
     Name        formattedlog
     Format      regex
-    Regex       (?<log_time>[^ ]*)\s+(?<log_level>INFO|WARN|DEBUG|ERROR|FATAL)\s+(?<message>.*)
+    Regex       (?<log_time>[^ ]*) (?<log_level>INFO|WARN|DEBUG|ERROR|FATAL) (?<message>.*)
     Time_Key    time
     Time_Format %Y-%m-%dT%H:%M:%S.%L
     Time_Keep   On
