BWCE chart changes for 1.1.0 release

--- a/charts/bwprovisioner/config/otel/output-otel.conf
+++ b/charts/bwprovisioner/config/otel/output-otel.conf
@@ -1,3 +1,7 @@
+# Copyright © 2023. Cloud Software Group, Inc.
+# This file is subject to the license terms contained
+# in the license file that is distributed with this file.
+
 [OUTPUT]
     Name  opentelemetry
     Match app.*
