--- a/charts/oauth2-proxy-manifests/Chart.yaml
+++ b/charts/oauth2-proxy-manifests/Chart.yaml
@@ -1,9 +1,9 @@
 name: oauth2-proxy
 # Original oauth2-proxy chart version: 6.17.0
 # Original oauth2-proxy version: 7.4.0
-version: 6.17.0-tibx-21
+version: 10.1.001
 apiVersion: v2
-appVersion: 1.0.1
+appVersion: 1.1.0
 home: https://oauth2-proxy.github.io/oauth2-proxy/
 description: A reverse proxy that provides authentication with Google, Github or other providers
 keywords:
