--- a/charts/bwprovisioner/config/otel/output-otel.conf
+++ b/charts/bwprovisioner/config/otel/output-otel.conf
@@ -1,12 +1,9 @@
-# Copyright © 2023. Cloud Software Group, Inc.
-# This file is subject to the license terms contained
-# in the license file that is distributed with this file.
-
 [OUTPUT]
     Name  opentelemetry
     Match app.*
     Host  otel-userapp-logs
     Port  4318
     Log_response_payload True
+    Logs_body_key $log
     Tls                  Off
     Tls.verify           Off
