--- a/charts/bwprovisioner/templates/fluentbit-configmap.yaml
+++ b/charts/bwprovisioner/templates/fluentbit-configmap.yaml
@@ -2,7 +2,7 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
-{{ if .Values.global.bwprovisioner.logging.enabled }}
+{{ if .Values.global.cp.logging.fluentbit.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
