Monitoring and finops charts for 1.2.0 release.

--- a/charts/tp-dp-monitor-agent/Chart.yaml
+++ b/charts/tp-dp-monitor-agent/Chart.yaml
@@ -1,10 +1,5 @@
 apiVersion: v2
-appVersion: 1.1.0
-description: TIBCO Platform Finops -- Monitoring
-home: https://github.com/tibco/tp-dp-monitor-agent
-icon: https://pbs.twimg.com/profile_images/1064638558110007296/K6HqaXwh_400x400.jpg
-maintainers:
-- email: cdash-dev@tibco.com
-  name: TIBCO FINOPS Dev Team
+appVersion: 1.2.0
+description: A Helm chart for deploying the tp-dp-monitor-agent service
 name: tp-dp-monitor-agent
-version: 1.1.94
+version: 1.2.118
