--- a/charts/tp-cp-core-finops/charts/monitoring-service/templates/fluentbit-configmap.yaml
+++ b/charts/tp-cp-core-finops/charts/monitoring-service/templates/fluentbit-configmap.yaml
@@ -1,73 +1,71 @@
-# Copyright © 2023. Cloud Software Group, Inc.
+#
+# Copyright © 2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
+#
 
-{{- if .Values.global.cp.logging.fluentbit.enabled }}
+{{- if (include "cp-core-configuration.enableLogging" .) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "tp-dp-monitor-agent.consts.appName" . }}-fluentbit-config
+  name: {{ include "monitoring-service.consts.appName" . }}-fluentbit-config
+  namespace: {{ include "monitoring-service.consts.namespace" . }}
   labels:
-    {{- include "tp-dp-monitor-agent.shared.labels.standard" . | nindent 4 }}
+    {{- include "monitoring-service.shared.labels.standard" . | nindent 4 }}
 data:
   fluent-bit.conf: |
-    [SERVICE]
-      Flush             1
-      Log_Level         info
-      Daemon            off
-      Parsers_File      parsers.conf
-
-    @INCLUDE input.conf
-    @INCLUDE filter.conf
-    @INCLUDE output.conf
-
+   [SERVICE]
+     Flush             1
+     Log_Level         info
+     Daemon            off
+     Parsers_File      parsers.conf
+ 
+   @INCLUDE input.conf
+   @INCLUDE filter.conf
+   @INCLUDE output.conf
+ 
   input.conf: |
     [INPUT]
       Name              tail
-      Tag               dp.${POD_NAMESPACE}.${POD_NAME}.${POD_ID}.${CONTAINER_NAME}
+      Tag               cp.${POD_NAMESPACE}.${POD_NAME}.${POD_ID}.${CONTAINER_NAME}
       Path              /var/log/pods/${POD_NAMESPACE}_${POD_NAME}_${POD_ID}/${CONTAINER_NAME}/*.log
       multiline.parser  docker, cri
       DB                /var/log/flb_kube.db
       Mem_Buf_Limit     5MB
       Skip_Long_Lines   On
       Refresh_Interval  10
-
+  
   filter.conf: |
     [FILTER]
       Name              record_modifier
-      Match             dp.*
+      Match             cp.*
       Remove_key        stream
       Remove_key        _p
-      
+  
     [FILTER]
       Name              parser
-      Match             dp.*
+      Match             cp.*
       Key_Name          log
       Parser            json_decode
       Reserve_Data      True
-
+  
     [FILTER]
       Name lua
-      Match dp.*
+      Match cp.*
       Script update_record.lua
       Call update_record
-
+  
   output.conf: |
     [OUTPUT]
-      Name   stdout
-      Match  dp.*
-      Format json
-    
-    [OUTPUT]
       Name                 opentelemetry
-      Match                dp.*
+      Match                cp.*
       Host                 otel-services.${POD_NAMESPACE}.svc.cluster.local
       Port                 4318
       Logs_uri             /v1/logs
       Log_response_payload True
       Tls                  Off
       Tls.verify           Off
-
+  
   parsers.conf: |
     [PARSER]
       Name              json_decode
@@ -82,16 +80,18 @@ data:
     function update_record(tag, timestamp, record)
       local newLog = record["log"]
       local newMsg = newLog["msg"]
-      for key, val in pairs(newLog) do
-        if(key ~= "level" and key ~= "caller" and key ~= "msg" and key ~= "stacktrace" and key ~= "error" and key ~= "errorVerbose") then
-          if(key ~= "time") then
-            newMsg = newMsg .. ", " .. key .. ": " .. tostring(val)
+      if(newLog ~= nil and type(newLog) == "table") then
+        for key, val in pairs(newLog) do
+          if(key ~= "level" and key ~= "caller" and key ~= "msg" and key ~= "stacktrace" and key ~= "error" and key ~= "errorVerbose") then
+            if(key ~= "time") then
+              newMsg = newMsg .. ", " .. key .. ": " .. tostring(val)
+            end
+            newLog[key] = nil
           end
-          newLog[key] = nil
         end
+        newLog["msg"] = newMsg
+        record["log"] = newLog
       end
-      newLog["msg"] = newMsg
-      record["log"] = newLog
       return 2, timestamp, record
     end
 {{- end }}
