--- a/charts/tp-dp-monitor-agent/values.yaml
+++ b/charts/tp-dp-monitor-agent/values.yaml
@@ -1,8 +1,6 @@
-# Copyright © 2023. Cloud Software Group, Inc.
+# Copyright © 2023 - 2024. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
-
-## CONTEXT
 
 replicaCount: "1"
 global:
@@ -17,12 +15,35 @@ global:
     resources:
       serviceaccount:
         serviceAccountName: ""
-  # .Values.global.enableLogging variable can be set to false to disable starting fluentbit side-car containers
-  enableLogging: true
+    logging:
+      fluentbit:
+        enabled: true
+    fluentbit:
+      securityContext:
+        runAsNonRoot: false
+        runAsUser: 0
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
 enableIngress: true
 ingress:
   annotations: {}
-    # nginx custom annotation example
-    # nginx.org/rewrites: "serviceName={{ include \"tp-dp-monitor-agent.consts.appName\" . }} rewrite=/" #https://github.com/nginxinc/kubernetes-ingress/tree/v2.4.2/examples/ingress-resources/rewrites
   pathPrefix: /tibco/agent/infra/tp-dp-monitor-agent/
-  className: "haproxy-dp-{{ .Values.global.cp.dataplaneId}}"  # Ex: nginx, haproxy
+  className: "tibco-dp-{{ .Values.global.cp.dataplaneId}}"  # Ex: nginx, haproxy
+
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
+  fsGroupChangePolicy: "Always"
+  seccompProfile:
+    type: RuntimeDefault
+
+securityContext:
+  monitorAgent:
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+        - ALL
